2007-06-27  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/callbacks.c, src/dialogs.c:
   Add palette to Colour Chooser Dialog.
   Fix picking colours starting with '#'.
   Replace existing selection with chosen colour.
 * src/callbacks.c, src/document.c, src/document.h, src/sciwrappers.c,
   src/sciwrappers.h, src/win32.c:
   Change signature of sci_replace_sel() to take a const gchar*.
   Move code to insert a colour to document.c
   Let the code also work on Windows (untested).


2007-06-27  Nick Treleaven  <nick.treleaven@btinternet.com>

 * plugins/demoplugin.c, src/plugindata.h, src/plugins.c:
   Move plugin name and description into a separate struct, which is set
   by calling the PLUGIN_INFO() macro - this can be read before the
   plugin is initialized.
   Added more comments for plugin authors.


2007-06-26  Nick Treleaven  <nick.treleaven@btinternet.com>

 * plugins/demoplugin.c, plugins/Makefile.am, configure.in,
   src/makefile.win32, src/plugindata.h, src/plugins.c, src/main.c,
   src/plugins.h, src/Makefile.am, win32-config.h, HACKING, Makefile.am,
   po/POTFILES.in:
   Added very basic plugin support - any plugins found in
   $prefix/lib/geany are loaded at startup. Windows support will be
   added later.
   Added Demo plugin (currently installed by default), which adds an
   item in the Tools menu.


2007-06-26  Enrico Tröger  <enrico.troeger@uvena.de>

 * geany.glade, src/document.c, src/editor.h, src/interface.c,
   src/keyfile.c, src/prefs.c:
   Add option to set a default encoding when opening files and disable
   auto detection of the file encoding.
 * geany.nsi: Change file encoding from ISO-8859-1 to UTF-8.
 * configure.in, plugins/Makefile.am, scintilla/Makefile.am,
   src/Makefile.am, tagmanager/Makefile.am:
   Change label of GTK check in configure.in from PACKAGE to GTK
   (only cosmetic).


2007-06-25  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/main.c: Use setlocale to enable translation of strings before