@@ -1,3 +1,11 @@
+2007-06-28  Nick Treleaven  <nick.treleaven@btinternet.com>
+
+ * src/search.c, src/document.c:
+   Fix hang with Find All/Usage with regex '^' or '$'.
+   Fix replacing '^' or '$' regexes.
+   Use double quotes for search strings.
+
+
 2007-06-27  Enrico Tröger  <enrico.troeger@uvena.de>
 
  * src/callbacks.c, src/dialogs.c:
